# engine

./: .clang-format  CMakeLists.txt  README.md  vs_build.bat  vs_build_x64.bat
BBee/: BBee.cpp  CMakeLists.txt  menu.cpp  menu.h
engine/: CMakeLists.txt  ai-base.h  ai.cpp  ai.h  archive.cpp  archive.h  buff.cpp  buff.h  bx2-engine.cpp  bx2-engine.h  combination.cpp  combination.h  data-def.h  director.cpp  director.h  effect.cpp  effect.h  engine.cpp  engine.h  entity.cpp  entity.h  macro-def.h  map.cpp  map.h  menu.cpp  menu.h  module.cpp  module.h  physic-module.cpp  physic-module.h  sdl_windx.cpp  sdl_windx.h  skill.cpp  skill.h  utily.h  weapon.cpp  weapon.h  windowx.h
inc/: common.h
jsoncpp/: CMakeLists.txt
lib/box2d/: box2d.lib  box2d_d.lib
lib/box2d/x64/: box2d.lib  box2d_d.lib
modulebuilder/: CMakeLists.txt  funcdecl.h  nativelib.cpp  nativelib.h
test/: CMakeLists.txt  egine_test.cpp  sdl_test.cpp  test.cpp
